--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
                 <h4>Logo</h4>
                 <p>Company</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -118,7 +118,7 @@
                 <h4>Mockup</h4>
                 <p>Friends</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-3.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -128,7 +128,7 @@
                 <h4>Projeto</h4>
                 <p>Sua Saúde</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-4.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -138,7 +138,7 @@
                 <h4>Logo</h4>
                 <p>Astrotech</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-5.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -148,7 +148,7 @@
                 <h4>Mockup</h4>
                 <p>Astrotech</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -158,7 +158,7 @@
                 <h4>Projeto</h4>
                 <p>Loja Virtual</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-7.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -168,7 +168,7 @@
                 <h4>Logo</h4>
                 <p>Friends</p>
                 <a href="assets/img/masonry-portfolio/masonry-portfolio-8.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"></a>
               </div>
             </div><!-- End Portfolio Item -->
 
