--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
               <div class="portfolio-info">
                 <h4>Projeto</h4>
                 <p>Flora Flor</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="Flora Flor" data-gallery="portfolio-gallery-app" class="glightbox preview-link"></a>
+                <a href="assets/img/masonry-portfolio/masonry-portfolio-1.jpg" title="Flora Flor" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 
               </div>
             </div><!-- End Portfolio Item -->
